[tool.black]
line-length = 100

[tool.isort]
known_first_party = "teamtime"
line_length = 100
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob="**/__init__.py"

[tool.vulture]
paths = ["teamtime"]

[tool.poetry]
name = "teamtime"
version = "v2.0.0"
description = "A tool for keeping track of staff in multiple timezones"
authors = ["Joe McManus <josephmc@alumni.cmu.edu>", "Mike Salvatore <mike.s.salvatore@gmail.com>"]
license = "GPLv3"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
repository = "https://github.com/mssalvatore/teamTime"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.3.0"
pandas = "^1.5.2"
plotly = "^5.11.0"
pytz = "^2022.6"
prettytable = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
